# BlackHole

./: BlackHole.kdev4  CMakeLists.txt
_header/: basicui.h  board.h  chain.h  core_engine.h  data_line.h  engine.h  game.h  global.h  machine_learning.h  search_engine.h  sstack.h  step_mapping.h  str_node.h  str_step.h
_source/: basicui.cpp  board.cpp  chain.cpp  data_line.cpp  engine.cpp  game.cpp  machine_learning.cpp  main.cpp  sstack.cpp  step_mapping.cpp
